* configure.ac (--enable-fixed-point): New to enable fixed-point arithmetic extension to C. * configure, config.in: Regenerate. * targhooks.h (default_fixed_point_supported_p): Declare. * targhooks.c (default_fixed_point_supported_p): Define. * target-def.h (TARGET_FIXED_POINT_SUPPORTED_P): New. (TARGET_INITIALIZER): Add TARGET_FIXED_POINT_SUPPORTED_P. * target.h (gcc_target): Add fixed_point_supported_p. * doc/install.texi (Configuration): Add --enable-fixed-point. * doc/tm.texi (TARGET_FIXED_POINT_SUPPORTED_P): Add.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/fixed-point@118407 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/config.in
+++ b/gcc/config.in
@@ -52,6 +52,12 @@
 #endif
 
 
+/* Define to 1 to enable fixed-point arithmetic extension to C. */
+#ifndef USED_FOR_TARGET
+#undef ENABLE_FIXED_POINT
+#endif
+
+
 /* Define if you want fold checked that it never destructs its argument. This
    is quite expensive. */
 #ifndef USED_FOR_TARGET
