svn merge -r116374:116375 svn+ssh://gcc.gnu.org/svn/gcc/branches/gcc-4_2-branch svn merge -r116556:116557 svn+ssh://gcc.gnu.org/svn/gcc/branches/gcc-4_2-branch svn merge -r116620:116621 svn+ssh://gcc.gnu.org/svn/gcc/branches/gcc-4_2-branch svn merge -r116621:116622 svn+ssh://gcc.gnu.org/svn/gcc/branches/gcc-4_2-branch svn merge -r116626:116627 svn+ssh://gcc.gnu.org/svn/gcc/branches/gcc-4_2-branch svn merge -r116693:116694 svn+ssh://gcc.gnu.org/svn/gcc/branches/gcc-4_2-branch svn merge -r117073:117074 svn+ssh://gcc.gnu.org/svn/gcc/branches/gcc-4_2-branch svn merge -r117074:117075 svn+ssh://gcc.gnu.org/svn/gcc/branches/gcc-4_2-branch svn merge -r117369:117370 svn+ssh://gcc.gnu.org/svn/gcc/branches/gcc-4_2-branch svn merge -r117393:117394 svn+ssh://gcc.gnu.org/svn/gcc/branches/gcc-4_2-branch svn merge -r117453:117454 svn+ssh://gcc.gnu.org/svn/gcc/branches/gcc-4_2-branch svn merge -r118450:118451 svn+ssh://gcc.gnu.org/svn/gcc/branches/gcc-4_2-branch svn merge -r118451:118452 svn+ssh://gcc.gnu.org/svn/gcc/branches/gcc-4_2-branch
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/redhat@118580 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-4_1-branch/libjava/configure.ac
+++ b/gcc-4_1-branch/libjava/configure.ac
@@ -665,7 +665,7 @@ AC_CONFIG_LINKS(java/lang/natConcreteProcess.cc:java/lang/nat${PLATFORM}Process.
 
 # Likewise for natInetAddress.cc and natVMNetworkInterface.cc.
 test -d java/net || mkdir java/net
-AC_CONFIG_LINKS(java/net/natInetAddress.cc:java/net/natInetAddress${PLATFORMNET}.cc)
+AC_CONFIG_LINKS(java/net/natVMInetAddress.cc:java/net/natVMInetAddress${PLATFORMNET}.cc)
 AC_CONFIG_LINKS(java/net/natVMNetworkInterface.cc:java/net/natVMNetworkInterface${PLATFORMNET}.cc)
 
 # Likewise for natPlainSocketImpl.cc and natPlainDatagramSocketImpl.cc.
