* c-lex.c (interpret_fixed): Declare. (interpret_float): Process _Fract and _Accum. (interpret_fixed): New function.
* tree.h (TREE_FIXED_CST_PTR, TREE_FIXED_CST): Define.
(struct tree_fixed_cst): New.
(tree_node): Add fixed_cst.

* tree.def (FIXED_CST): New constant.

* tree.c (fixed_value.h): New include.
(tree_code_size): Support FIXED_CST.
(build_fixed): New function.
(tree_node_structure): Support FIXED_CST.
(simple_cst_equal): Likewise.
(walk_tree): Likewise.

* final.c (output_addr_const): Process CONST_FIXED.

* tree-gimple.c (is_gimple_formal_tmp_rhs): Process FIXED_CST.
(is_gimple_min_invariant): Likewise.

* rtl.h (fixed_value.h): New include.
(rtx_def): Add a new field of fixed_value to u.
(XCNMPFV): Define for accessing fixed_value.
(CONST_FIXED_VALUE, CONST_FIXED_VALUE_HIGH, CONST_FIXED_VALUE_LOW):
Define.

* rtl.def (CONST_FIXED): New constant.

* expr.c (expand_expr_real_1): Process FIXED_CST.

* treestruct.def: Add TS_FIXED_CST.

* gimplify.c (gimplify_expr): Process FIXED_CST.

* emit-rtl.c (const_fixed_htab): New hash table.
(const_fixed_htab_hash, const_fixed_htab_eq, lookup_const_fixed):
Declare.
(const_fixed_htab_hash, const_fixed_htab_eq, lookup_const_fixed,
const_fixed_from_fixed_value): New functions.
(init_emit_once): Create const_fixed_htab.

* simplify-rtx.c (simplify_immed_subreg): Support CONST_FIXED.
Process MODE_FRACT, MODE_UFRACT, MODE_ACCUM, MODE_UACCUM.
(simplify_subreg): Support CONST_FIXED.

* varasm.c (assemble_integer): Extend to support fixed-point constants
by using different machine classes.
(const_rtx_hash_1): Support CONST_FIXED.
(output_constant_pool_2): Process MODE_FRACT, MODE_UFRACT, MODE_ACCUM,
MODE_UACCUM, MODE_VECTOR_FRACT, MODE_VECTOR_UFRACT, MODE_VECTOR_ACCUM,
MODE_VECTOR_UACCUM.
(initializer_constant_valid_p): Support FIXED_CST.
(output_constant): Support FIXED_POINT_TYPE.

* Makefile.in (OBJS-common): Add fixed_value.o.
(fixed_value.o): New rule to build it.
(GTFILES): Add fixed_value.h.

* fixed_value.h, fixed_

--- a/gcc/Makefile.in
+++ b/gcc/Makefile.in
@@ -997,7 +997,7 @@ OBJS-common = \
  debug.o df-core.o df-problems.o df-scan.o dfp.o diagnostic.o dojump.o     \
  dominance.o loop-doloop.o	   					   \
  dwarf2asm.o dwarf2out.o emit-rtl.o except.o explow.o loop-iv.o		   \
- expmed.o expr.o final.o flow.o fold-const.o function.o gcse.o		   \
+ expmed.o expr.o final.o fixed_value.o flow.o fold-const.o function.o gcse.o \
  genrtl.o ggc-common.o global.o graph.o gtype-desc.o			   \
  haifa-sched.o hooks.o ifcvt.o insn-attrtab.o insn-emit.o insn-modes.o	   \
  insn-extract.o insn-opinit.o insn-output.o insn-peep.o insn-recog.o	   \
@@ -2269,6 +2269,8 @@ real.o : real.c $(CONFIG_H) $(SYSTEM_H) coretypes.h $(TM_H) $(TREE_H) \
    toplev.h $(TM_P_H) $(REAL_H)
 dfp.o : dfp.c dfp.h $(CONFIG_H) $(SYSTEM_H) coretypes.h $(TM_H)	$(TREE_H) \
    toplev.h $(TM_P_H) $(REAL_H) $(DECNUM_H)
+fixed_value.o: fixed_value.c $(CONFIG_H) $(SYSTEM_H) coretypes.h $(TM_H) \
+   $(TREE_H) fixed_value.h
 integrate.o : integrate.c $(CONFIG_H) $(SYSTEM_H) coretypes.h $(TM_H) \
    $(RTL_H) $(TREE_H) $(FLAGS_H) debug.h $(INTEGRATE_H) insn-config.h \
    $(EXPR_H) $(REAL_H) $(REGS_H) intl.h $(FUNCTION_H) output.h $(RECOG_H) \
@@ -2842,7 +2844,7 @@ GTFILES = $(srcdir)/input.h $(srcdir)/coretypes.h \
   $(tm_file_list) $(HASHTAB_H) $(SPLAY_TREE_H) $(srcdir)/bitmap.h \
   $(srcdir)/coverage.c $(srcdir)/rtl.h \
   $(srcdir)/optabs.h $(srcdir)/tree.h $(srcdir)/function.h $(srcdir)/libfuncs.h $(SYMTAB_H) \
-  $(srcdir)/real.h $(srcdir)/varray.h $(srcdir)/insn-addr.h $(srcdir)/hwint.h \
+  $(srcdir)/real.h $(srcdir)/fixed_value.h $(srcdir)/varray.h $(srcdir)/insn-addr.h $(srcdir)/hwint.h \
   $(srcdir)/ipa-reference.h $(srcdir)/output.h \
   $(srcdir)/cselib.h $(srcdir)/basic-block.h  $(srcdir)/cgraph.h \
   $(srcdir)/c-common.h $(srcdir)/c-tree.h $(srcdir)/reload.h \
