2006-11-17  Andrew Haley  <aph@redhat.com>
        * java/net/natVMURLConnection.cc: Check for HAVE_MAGIC_OPEN.
        * configure.ac: Add HAVE_MAGIC_OPEN.
        * include/config.h.in: Regenerated.
        * configure: Regenerated.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/gcj@118945 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcj-eclipse-merge-branch/libjava/configure.ac
+++ b/gcj-eclipse-merge-branch/libjava/configure.ac
@@ -1216,7 +1216,9 @@ else
    fi
 
    LIBMAGIC=
-   AC_CHECK_LIB(magic, magic_open, LIBMAGIC=-lmagic)
+   AC_CHECK_LIB(magic, magic_open, [
+      AC_DEFINE([HAVE_MAGIC_OPEN], 1, [Define if you have magic_open().])
+      LIBMAGIC="-lmagic"])
    AC_SUBST(LIBMAGIC)
 
    # Test for Gtk stuff, if asked for.
