* Makefile.in (tree-pretty-print.o): Add dependence from fixed_value.h. * tree-pretty-print.c (fixed_value.h): New include. (dump_generic_node): Handle FIXED_POINT_TYPE and FIXED_CST. * c-decl.c (declspecs_add_qual): Remove the case of RID_SAT. (declspecs_add_type): Handle RID_SAT and warn when -pedantic. Give errors when _Sat is used with non fixed-point types. * fixed_value.h (fixed_to_decimal): Declare. * fixed_value.c (fixed_to_decimal): New function. * c-common.h (enum rid): Move RID_SAT right after RID_THREAD and before RID_ONEWAY, such that it is checked in declspecs_add_type. * c-common.c (c_common_nodes_and_builtins): Record builtin types for fixed-point types. * c-parser.c (c_parser_declspecs): Change comments such that _Sat belongs to type-specifier. (c_parser_declspecs): Move RID_SAT after RID_ACCUM.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/fixed-point@119029 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/Makefile.in
+++ b/gcc/Makefile.in
@@ -2125,7 +2125,8 @@ tree-nomudflap.o : $(CONFIG_H) $(SYSTEM_H) $(TREE_H) $(TREE_INLINE_H) \
    $(GGC_H) gt-tree-mudflap.h tree-pass.h toplev.h
 tree-pretty-print.o : tree-pretty-print.c $(CONFIG_H) $(SYSTEM_H) \
    $(TREE_H) $(DIAGNOSTIC_H) $(REAL_H) $(HASHTAB_H) $(TREE_FLOW_H) \
-   $(TM_H) coretypes.h tree-iterator.h tree-chrec.h langhooks.h tree-pass.h
+   $(TM_H) coretypes.h tree-iterator.h tree-chrec.h langhooks.h tree-pass.h \
+   fixed_value.h
 fold-const.o : fold-const.c $(CONFIG_H) $(SYSTEM_H) coretypes.h $(TM_H) \
    $(TREE_H) $(FLAGS_H) $(REAL_H) toplev.h $(HASHTAB_H) $(EXPR_H) $(RTL_H) \
    $(GGC_H) $(TM_P_H) langhooks.h $(MD5_H)
