--- a/libsupc++/Makefile.in
+++ b/libsupc++/Makefile.in
@@ -69,21 +69,21 @@ am__installdirs = "$(DESTDIR)$(toolexeclibdir)" \
 toolexeclibLTLIBRARIES_INSTALL = $(INSTALL)
 LTLIBRARIES = $(noinst_LTLIBRARIES) $(toolexeclib_LTLIBRARIES)
 libsupc___la_LIBADD =
-am__libsupc___la_SOURCES_DIST = array_type_info.cc bad_cast.cc \
-	bad_typeid.cc class_type_info.cc del_op.cc del_opnt.cc \
-	del_opv.cc del_opvnt.cc dyncast.cc eh_alloc.cc eh_arm.cc \
-	eh_aux_runtime.cc eh_call.cc eh_catch.cc eh_exception.cc \
-	eh_globals.cc eh_personality.cc eh_term_handler.cc \
-	eh_terminate.cc eh_throw.cc eh_type.cc eh_unex_handler.cc \
-	enum_type_info.cc function_type_info.cc \
+am__libsupc___la_SOURCES_DIST = array_type_info.cc atexit_arm.cc \
+	bad_cast.cc bad_typeid.cc class_type_info.cc del_op.cc \
+	del_opnt.cc del_opv.cc del_opvnt.cc dyncast.cc eh_alloc.cc \
+	eh_arm.cc eh_aux_runtime.cc eh_call.cc eh_catch.cc \
+	eh_exception.cc eh_globals.cc eh_personality.cc \
+	eh_term_handler.cc eh_terminate.cc eh_throw.cc eh_type.cc \
+	eh_unex_handler.cc enum_type_info.cc function_type_info.cc \
 	fundamental_type_info.cc guard.cc new_handler.cc new_op.cc \
 	new_opnt.cc new_opv.cc new_opvnt.cc pbase_type_info.cc \
 	pmem_type_info.cc pointer_type_info.cc pure.cc \
 	si_class_type_info.cc tinfo.cc tinfo2.cc vec.cc \
 	vmi_class_type_info.cc vterminate.cc cp-demangle.c
-am__objects_1 = array_type_info.lo bad_cast.lo bad_typeid.lo \
-	class_type_info.lo del_op.lo del_opnt.lo del_opv.lo \
-	del_opvnt.lo dyncast.lo eh_alloc.lo eh_arm.lo \
+am__objects_1 = array_type_info.lo atexit_arm.lo bad_cast.lo \
+	bad_typeid.lo class_type_info.lo del_op.lo del_opnt.lo \
+	del_opv.lo del_opvnt.lo dyncast.lo eh_alloc.lo eh_arm.lo \
 	eh_aux_runtime.lo eh_call.lo eh_catch.lo eh_exception.lo \
 	eh_globals.lo eh_personality.lo eh_term_handler.lo \
 	eh_terminate.lo eh_throw.lo eh_type.lo eh_unex_handler.lo \
@@ -98,9 +98,9 @@ am_libsupc___la_OBJECTS = $(am__objects_1) $(am__objects_2)
 libsupc___la_OBJECTS = $(am_libsupc___la_OBJECTS)
 libsupc__convenience_la_LIBADD =
 am__libsupc__convenience_la_SOURCES_DIST = array_type_info.cc \
-	bad_cast.cc bad_typeid.cc class_type_info.cc del_op.cc \
-	del_opnt.cc del_opv.cc del_opvnt.cc dyncast.cc eh_alloc.cc \
-	eh_arm.cc eh_aux_runtime.cc eh_call.cc eh_catch.cc \
+	atexit_arm.cc bad_cast.cc bad_typeid.cc class_type_info.cc \
+	del_op.cc del_opnt.cc del_opv.cc del_opvnt.cc dyncast.cc \
+	eh_alloc.cc eh_arm.cc eh_aux_runtime.cc eh_call.cc eh_catch.cc \
 	eh_exception.cc eh_globals.cc eh_personality.cc \
 	eh_term_handler.cc eh_terminate.cc eh_throw.cc eh_type.cc \
 	eh_unex_handler.cc enum_type_info.cc function_type_info.cc \
@@ -342,6 +342,7 @@ headers = \
 
 sources = \
 	array_type_info.cc \
+	atexit_arm.cc \
 	bad_cast.cc \
 	bad_typeid.cc \
 	class_type_info.cc \
