Added new static_asserts for unsigned integral in dynamic_bitset. Added new testsuite directories. Rearrangement and renaming of source.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/libstdcxx-tr2-ideas-branch@153020 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libstdc++-v3/include/Makefile.am
+++ b/libstdc++-v3/include/Makefile.am
@@ -622,11 +622,10 @@ tr2_srcdir = ${glibcxx_srcdir}/include/tr2
 tr2_builddir = ./tr2
 tr2_headers = \
 	${tr2_srcdir}/bool_set \
-	${tr2_srcdir}/bool_set.cc \
 	${tr2_srcdir}/bool_set.tcc \
 	${tr2_srcdir}/cmath \
 	${tr2_srcdir}/dynamic_bitset \
-	${tr2_srcdir}/fp_comp.cpp \
+	${tr2_srcdir}/fp_comp.h \
 	${tr2_srcdir}/integer \
 	${tr2_srcdir}/integer.h \
 	${tr2_srcdir}/rational \
