--- a/gcc-4_5-branch/gcc/Makefile.in
+++ b/gcc-4_5-branch/gcc/Makefile.in
@@ -2065,9 +2065,10 @@ c-opts.o : c-opts.c $(CONFIG_H) $(SYSTEM_H) coretypes.h $(TM_H)		\
 c-cppbuiltin.o : c-cppbuiltin.c $(CONFIG_H) $(SYSTEM_H) coretypes.h $(TM_H) \
 	$(TREE_H) version.h $(C_COMMON_H) $(C_PRAGMA_H) $(FLAGS_H) \
 	$(TOPLEV_H) output.h $(EXCEPT_H) $(REAL_H) $(TARGET_H) $(TM_P_H) \
-	$(BASEVER) debug.h
+	$(BASEVER) debug.h $(DEVPHASE)
 	$(COMPILER) -c $(ALL_COMPILERFLAGS) $(ALL_CPPFLAGS) \
-		-DBASEVER=$(BASEVER_s) $< $(OUTPUT_OPTION)
+		-DBASEVER=$(BASEVER_s) -DDEVPHASE=$(DEVPHASE_s) \
+		$< $(OUTPUT_OPTION)
 
 # A file used by all variants of C and some other languages.
 
